# Harmony

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  Harmony.spec  README-cn.md  README.md  build.py  build.sh  build_linux.sh  build_macos.sh  build_uv.sh  build_windows.bat  build_windows.ps1  collect_qt_plugins.sh  detect_qt_plugins.sh  download_fonts.sh  harmony.desktop  main.py  pyproject.toml  pyrightconfig.json  release.sh  requirements.txt  start.sh  test_sleep_dialog.py  test_sleep_timer_display.py
app/: application.py  bootstrap.py
build_analysis/: qt_plugins_whitelist.txt
database/: __init__.py  manager.py  models.py
docs/: Optimization-Report.md  Optimization.md  artist-id-mismatch-fix.md  bug-audit-2026-04-08.md  bug-report-2026-03-30.md  bug-report-2026-03-31.md  bug-report-2026-04-02.md  bug-report-2026-04-08.md  bug-report-lyrics-splitter-2026-03-31.md  bug-report.md  bugfix_auto_next_all_tracks.md  bugfix_auto_next_mpv_properties.md  bugfix_cloud_auto_next.md  code-quality.md  cover-dialog-fix.md  current-missing-features-2026-04-09.md  deduplication_feature.md  dialog-theme-refactoring.md  fcitx5-input-method-fix.md  fix-album-covers-feature.md  fix-album-covers-implementation.md  font-best-practices.md  font-bundling.md  font-fallback.md  light-theme-implementation.md  list_views_bugfixes.md  list_views_cover_fix.md  list_views_implementation.md  logging_optimization.md  missing-features.md  missing-tests.md  navigation-stack-fix.md  online-album-card-theme-implementation.md  online-cover-fix.md  online-music-buttons-update.md  optimization_report.md  (+36 more)
(+707 files in other folders)
