[project]
name = "music-player"
version = "0.1.0"
description = "A Desktop Music Player powered by AI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "certifi>=2024.0.0",
    "lxml>=6.0.2",
    "mutagen>=1.47.0",
    "openai>=2.29.0",
    "opencc-python-reimplemented>=0.1.7",
    "platformdirs>=4.0.0",
    "pyacoustid>=1.3.0",
    "pycryptodome>=3.23.0",
    "pymediainfo>=7.0.1",
    "pyside6>=6.11.0",
    "pyside6-addons>=6.11.0",
    "pyzbar>=0.1.9",
    "qqmusic-api-python>=0.4.1",
    "qrcode[pil]>=8.2",
    "requests>=2.32.5",
    "shiboken6>=6.11.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
